[package]
name = "lightning-proxy-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
hex = { package = "hex-conservative", version = "0.2.0" }
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lightning-relay = { path = "../lightning-relay" }
tokio = "1.38.0"
anyhow = "1.0.86"
bitcoin = "0.30.2"

